--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,9 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
+  --color-background-2: var(--background-2);
+  --color-checkbox: var(--checkbox);
 }
 
 :root {
@@ -78,6 +81,10 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+  /* custom */
+  --background-2: #F2F2F2;
+  --checkbox: #E8E8E8;
 }
 
 .dark {
@@ -112,6 +119,10 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+
+  /* custom */
+  --background-2: #151C22;
+  --checkbox: #E8E8E8;
 }
 
 @layer base {
